fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -2,15 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
-#root {
-  width: 100vw;
+/* body {
   overflow: hidden;
-}
+  height: 100vh;
+} */
 
-.App {
+/* .App {
   overflow-y: scroll;
+  height: auto;
   width: 100%;
-}
+} */
 
 * {
   padding: 0;
